# org-framework

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING  LICENSE.md  README.md  conanfile.txt
docs/: OrgStyleGuide.aux
docs/src/: OrgStyleGuide.tex
etc/: gitconfig  requirements.txt
etc/cmake/: cxx.cmake
src/: Animation.hpp  Audio.cpp  Audio.hpp  BasicCollisions.cpp  BasicCollisions.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  CollisionDetection.cpp  CollisionDetection.hpp  Controller.cpp  Controller.hpp  DiagonalCollisions.cpp  DiagonalCollisions.hpp  DisplayEngine.cpp  DisplayEngine.hpp  Entity.cpp  Entity.hpp  Geometry.cpp  Geometry.hpp  Lines.hpp  LookAheadCollisions.cpp  LookAheadCollisions.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PolygonCollider.cpp  PolygonCollider.hpp  SATCollisions.cpp  SATCollisions.hpp  SDL.h  Texture.cpp  Texture.hpp  TexturedEntity.cpp  TexturedEntity.hpp  Timer.cpp  Timer.hpp  Vectors.hpp  Window.cpp  (+3 more)
src/controls/: CMakeLists.txt  Controller.cpp  Controller.hpp  controls.hpp
src/display/: Animation.cpp  Animation.hpp  CMakeLists.txt  Camera.hpp  DisplayEngine.cpp  DisplayEngine.hpp  Texture.cpp  Texture.hpp  TexturedEntity.cpp  TexturedEntity.hpp  display.hpp
src/entities/: CMakeLists.txt  Entity.cpp  Entity.hpp  entities.hpp
src/math/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  Vectors.hpp  math.hpp
src/physics/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.hpp  physics.hpp
src/platform/: CMakeLists.txt  Window.hpp  platform.hpp
src/time/: CMakeLists.txt  Timer.hpp  time.hpp
tools/: sprite_sheet_builder.py
tools/project_generator/: main.cxx  test
tools/project_generator/include/: project_generator.hpp
